@@ -1,11 +1,8 @@
-<!-- Automagically generated by the ToDo program on 2005-05-13 -->
+<!-- Automagically generated by the ToDo program on 2005-05-14 -->
 <todo version="0.1.18">
     <title>
         Todo list for herdstat
     </title>
-    <note priority="veryhigh" time="1115978579">
-        Add a --no-maintainer flag for -p searches
-    </note>
     <note priority="verylow" time="1115448993">
         Instead of having -D print debug messages to stdout, maybe have it dump it all to ./herdstat.debug
     </note>
