@@ -37,7 +37,7 @@ _herdstat() {
 	-v --verbose -q --quiet -D --debug -t --timer -o --outfile
         -F --fetch -c --count -n --nocolor --no-herd -m --metadata
         --with-herd -w --which --versions --no-overlay -r --regex
-        -E --extended -f --find --qa"
+        -E --extended -f --find --qa --with-maintainer --no-maintainer"
 
     if [[ ${cur} == -* ]] ; then
         COMPREPLY=( $(compgen -W "${opts}" -- ${cur}) )
@@ -55,7 +55,10 @@ _herdstat() {
 	    COMPREPLY=( $(compgen -W "$(_complete_dev) ${opts} all" -- ${cur}) )
 	    ;;
         --with-herd)
-            COMPREPLY=( $(compgen -W "$(_complete_herd) no-herd" -- ${cur}))
+            COMPREPLY=( $(compgen -W "$(_complete_herd) no-herd" -- ${cur}) )
+            ;;
+        --with-maintainer)
+            COMPREPLY=( $(compgen -W "$(_complete_dev) none" -- ${cur}) )
             ;;
         -m|--metadata|-w|--which|--versions|-f|--find)
             local words p=$(_portdir)
@@ -113,11 +116,11 @@ _herdstat() {
                 [[ ${x} == *p* ]] && pkg=1
 
                 # metadata
-                if [[ ${x} != "--herdsxml" ]] && \
+                if [[ ${x} != "--herdsxml" && ${x} != --with-* ]] && \
                     [[ ${x} == *m* && ${x} != "--timer" ]]
                 then
                     meta=1
-                elif [[ ${x} == *w* && ${x} != "--with-herd" ]] || \
+                elif [[ ${x} == *w* && ${x} != --with-* ]] || \
                      [[ ${x} == "--versions" ]] ; then
                     which=1
                 fi
